--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<! -- First comment -->
 <h1 class="main-heading text-center"><u><b>Tribute Page</b></u></h1>
 <div class="container">
    <div class="jumbotron">
