--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@ On January 6, 2011, Swartz was arrested by MIT police on state breaking-and-ente
     </div>
    </div>
 </div>    
+  
+<! -- third comment -->
   <h2 class="footer text-center">Coded by <a href="https://github.com/aviral1701">Aviral Verma</a></h2>
 
 </body></html>
