--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
          <div class="thumbnal">
            <img src="http://joanmira.com/content/images/2015/11/aaron-swartz.jpg" style="width:80%;">
          </div> 
+      
+<! -- foruth comment -->
            <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 extra">
              <h3 class="text-center"><strong>A short description:</strong></h3>
              <p class="text-center">Aaron Hillel Swartz (November 8, 1986 - January 11, 2013) was an American computer programmer, entrepreneur, writer, political organizer, and Internet hacktivist. He was involved in the development of the web feed format RSS and the Markdown publishing format, the organization Creative Commons,the website framework web.py, and the social news site Reddit, in which he became a partner after its merger with his company,Infogami.</p>
