--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <title>Tribute-Aaron Swartz</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> // Bootstrap should be replaced by flex in css
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1 class="main-heading text-center"><u><b>Tribute Page</b></u></h1>
 <div class="container">
    <div class="jumbotron">
-     <div class="row">
-       <div class="col-xs-12">
+     <div class="row"> //here you could write flex-container
+       <div class="col-xs-12"> //here you could write flex
          <h1 class="text-center"><b>Aaron Swartz</b></h1>
          <h2 class="text-center"><b>The Internet's own boy</b></h2>
          <div class="thumbnal">
